--- a/css/main.css
+++ b/css/main.css
@@ -95,8 +95,8 @@ header {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+  /* -webkit-filter: grayscale(1);
+  filter: grayscale(1); */
   overflow: hidden;
 }
 
